--- a/style.css
+++ b/style.css
@@ -76,7 +76,10 @@ button {
 }
 
 .curr-subject {
+    display: flex;
+    align-items: center;
     visibility: hidden;
+    gap: .25rem;
 }
 
 /*************** End Hide Other Screens ****************/
@@ -165,6 +168,12 @@ h1>span {
     font-weight: 500;
 }
 
+h2 {
+    color: var(--text-color);
+    font-size: 1.125rem;
+    font-weight: 500;
+}
+
 p {
     color: var(--text-color-p);
     font-style: italic;
@@ -194,22 +203,22 @@ button {
     box-shadow: 0px 16px 40px 0px rgba(143, 160, 193, .14);
 }
 
-.button-icon-container {
-    border-radius: .75rem;
-}
-
-.button-html>.button-icon-container {
+.button-icon-container>img[src="./assets/images/icon-html.svg"] {
     background-color: var(--html-bg);
 }
 
-.button-css>.button-icon-container {
+.button-icon-container>img[src="./assets/images/icon-css.svg"] {
     background-color: var(--css-bg);
 }
 
-.button-js>.button-icon-container {
+.button-icon-container>img[src="./assets/images/icon-js.svg"] {
     background-color: var(--js-bg);
 }
 
-.button-accessibility>.button-icon-container {
+.button-icon-container>img[src="./assets/images/icon-accessibility.svg"] {
     background-color: var(--accessibility-bg);
+}
+
+.button-icon-container {
+    border-radius: .75rem;
 }
