add async function getQuiz to retrieve json data

--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ button {
     font-weight: 500;
     display: flex;
     align-items: center;
+    width: 100%;
     gap: 1rem;
     border-radius: .75rem;
     border: 0;
