--- a/style.css
+++ b/style.css
@@ -164,7 +164,6 @@ input:checked+.slider:before {
 body {
     height: 100vh;
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 
@@ -412,10 +411,6 @@ button:hover {
         flex-direction: column;
     }
 
-    .start-menu {
-        padding-top: 0rem;
-    }
-
     .row-top {
         margin-bottom: 0;
     }
@@ -427,6 +422,10 @@ button:hover {
 
 @media (min-width: 1440px) {
 
+    body {
+        align-items: center;
+    }
+
     .left-content {
         max-width: 35rem;
     }
@@ -437,7 +436,6 @@ button:hover {
 
     .start-menu {
         justify-content: space-between;
-        padding: 6rem 8.75rem;
         gap: 10rem;
     }
 
